--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,10 @@ WATSONX_PROJECT_ID=your_project_id
 MODEL=granite-1
 # Optional: path template for inference. Use placeholders {project_id} and {model} if needed.
 # Example: /v1/projects/{project_id}/models/{model}/infer
+# Example : ibm/granite-4-h-small
 INFER_PATH=/v1/generate
 
 # For OpenAI
 #OPENAI_API_KEY=sk-...
 #MODEL=gpt-5
+
